# pliant-demo-architect-mcp

./: .gitignore  README.md  client.py  fixtures.py  mock.py  models.py  pyproject.toml  server.py
.github/skills/pliant-demo-prep/: SKILL.md
.github/skills/pliant-policy-check/: SKILL.md
apps/: __init__.py  callback_dashboard.py  controls_card.py
scripts/: smoke_run.py
tests/: conftest.py  helpers.py  test_callbacks.py  test_controls.py  test_demo_data.py  test_policy.py  test_prompt_chains.py  test_setup.py  test_tool_payloads.py
